Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,3 +2,5 @@
 	inheritFrom = Public-Plugins
 [submit]
 	action = inherit
+[project]
+	description = This plugin exposes Gerrit metrics to Prometheus (https://prometheus.io/).
