Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,5 @@
 	action = inherit
 [project]
 	description = This plugin exposes Gerrit metrics to Prometheus (https://prometheus.io/).
+[access "refs/*"]
+	owner = group plugins-metrics-reporter-prometheus
